[package]
name = "lsat_middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
bitcoin = "0.32.3"
dotenv = "0.15.0"
hex = "0.4.3"
lightning = "0.0.124"
lightning-invoice = "0.32.0"
macaroon = "0.3.0"
reqwest = "0.12.7"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = "1.0.210"
tokio = "1.40.0"
tonic_openssl_lnd = "0.2.0"
x509-parser = "0.16.0"
