[package]
name = "l402_middleware"
version = "1.9.0"
description = "A middleware library for rust that provides handler functions to accept microtransactions before serving ad-free content or any paid APIs."
readme = "README.md"
documentation = "https://docs.rs/l402_middleware"
repository = "https://github.com/DhananjayPurohit/l402_middleware"
homepage = "https://github.com/DhananjayPurohit/l402_middleware"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
bitcoin = "0.32.3"
cln-rpc = "0.4.0"
dotenv = "0.15.0"
hex = "0.4.3"
lightning = "0.0.125"
lightning-invoice = "0.32.0"
macaroon = "0.3.0"
nwc = "0.41.0"
reqwest = "0.12.7"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["net", "rt", "time"] }
tonic = "0.7"
tonic-openssl = "0.2"
tonic_openssl_lnd = "0.2.0"
tokio-socks = "0.5.0"
tokio-openssl = "0.6.0"
openssl = "0.10"
tower = "0.4"
http = "0.2"
uuid = { version = "1.12.1", features = ["v4"] }

[features]
no-accept-authenticate-required = []
